Fix color contrast

--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -30,7 +30,7 @@
   .social-text {
     width: 150px;
     margin-bottom: 20px;
-    color: #7f8cff;
+    color: $blue-8;;
     position: relative;
     font-family: "Poppins", Arial, Verdana, Tahoma, sans-serif;
     font-weight: 400;
