--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -27,7 +27,7 @@
 
     .logo-text {
       display: inline-block;
-      color: $blue-4;
+      color: $blue-8;
       width: 76px;
       height: 45px;
       position: relative;
